fixed video element overflow

--- a/posts/posts.css
+++ b/posts/posts.css
@@ -7,6 +7,10 @@ img {
     max-width: 100%;
 }
 
+video {
+    max-width: 100%;
+}
+
 a {
     max-width: fit-content;
 }
